--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio - Pedro Henrique</title>
-  <link rel="stylesheet" href="/style/page_index.css">
+  <link rel="stylesheet" href="page_index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
   <main class="container">
-    <img src="/img/674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto">
+    <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto">
 
     <h1>Pedro Henrique Lopes de Lara</h1>
     <p class="descricao">
