--- a/index.html
+++ b/index.html
@@ -4,23 +4,76 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio - Pedro Henrique</title>
-  <link rel="stylesheet" href="page_index.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-</head>
-<body>
-  <main class="container">
-    <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto">
+  
 
-    <h1>Pedro Henrique Lopes de Lara</h1>
-    <p class="descricao">
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+
+ 
+  <link rel="stylesheet" href="page_index.css">
+</head>
+
+<body class="bg-dark text-light">
+
+
+  <main class="container text-center p-4 my-5">
+    <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto mb-4">
+
+    <h1 class="fw-bold nome">Pedro Henrique Lopes de Lara</h1>
+    <p class="descricao my-3">
       Sou desenvolvedor web apaixonado por criar interfaces modernas e funcionais.<br>
       Gosto de transformar ideias em código com design simples e elegante.
     </p>
 
-    <div class="links">
-      <a href="https://github.com/PedroLara-jpg" target="_blank">GitHub</a>
-      <a href="mailto:mrpedro342@email.com">E-mail</a>
+    <div class="d-flex justify-content-center gap-3 mt-4">
+      <a href="https://github.com/PedroLara-jpg" target="_blank" class="btn btn-outline-danger">GitHub</a>
+      <a href="mailto:mrpedro342@email.com" class="btn btn-outline-danger">E-mail</a>
     </div>
   </main>
+
+
+  <section class="container my-5">
+    <h2 class="text-center mb-4 text-danger">Meus Projetos</h2>
+
+    <div id="carouselProjetos" class="carousel slide" data-bs-ride="carousel">
+      
+ 
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselProjetos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselProjetos" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselProjetos" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+
+ 
+      <div class="carousel-inner rounded-4 shadow-lg">
+        <div class="carousel-item active">
+          <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" class="d-block w-100" alt="Projeto 1">
+        </div>
+        <div class="carousel-item">
+          <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" class="d-block w-100" alt="Projeto 2">
+        </div>
+        <div class="carousel-item">
+          <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" class="d-block w-100" alt="Projeto 3">
+        </div>
+      </div>
+
+     
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselProjetos" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselProjetos" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Próximo</span>
+      </button>
+    </div>
+  </section>
+
+ 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
