--- a/index.html
+++ b/index.html
@@ -5,21 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio - Pedro Henrique</title>
   
-
-
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   >
 
- 
   <link rel="stylesheet" href="page_index.css">
 </head>
 
 <body class="bg-dark text-light">
 
+ 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-danger shadow-sm">
+  <div class="container">
+    <a class="navbar-brand text-danger fw-bold" href="#">Pedro Henrique</a>
 
-  <main class="container text-center p-4 my-5">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active text-light" href="#sobre">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#projetos">Projetos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+  <main id="sobre" class="container text-center p-4 my-5">
     <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto mb-4">
 
     <h1 class="fw-bold nome">Pedro Henrique Lopes de Lara</h1>
@@ -34,8 +53,7 @@
     </div>
   </main>
 
-
-  <section class="container my-5">
+  <section id="projetos" class="container my-5">
     <h2 class="text-center mb-4 text-danger">Meus Projetos</h2>
 
     <div id="carouselProjetos" class="carousel slide" data-bs-ride="carousel">
