--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
  
       <div class="carousel-inner rounded-4 shadow-lg">
         <div class="carousel-item active">
-          <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" class="d-block w-100" alt="Projeto 1">
+          <img src="devil-may-cry-nero-feature.avif" class="d-block w-100" alt="Projeto 1">
         </div>
         <div class="carousel-item">
-          <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" class="d-block w-100" alt="Projeto 2">
+          <img src="THE CAPCOM PROJECT - Trish.png" class="d-block w-100" alt="Projeto 2">
         </div>
         <div class="carousel-item">
-          <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" class="d-block w-100" alt="Projeto 3">
+          <img src="989f0xwrif931.jpg" class="d-block w-100" alt="Projeto 3">
         </div>
       </div>
 
