--- a/pages/index.html
+++ b/pages/index.html
@@ -4,18 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio - Pedro Henrique</title>
-  
+
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   >
-
-  <link rel="stylesheet" href="page_index.css">
+<link rel="icon" href="/img/674d493fcbf7c40c8fb4f006d76b41e7.jpg">
+  <link rel="stylesheet" href="/style/page_index.css">
 </head>
 
 <body class="bg-dark text-light">
 
- 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-danger shadow-sm">
   <div class="container">
     <a class="navbar-brand text-danger fw-bold" href="#">Pedro Henrique</a>
@@ -31,6 +30,8 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" href="#projetos">Projetos</a>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="#competencias">Competências</a>
         </li>
       </ul>
     </div>
@@ -39,7 +40,7 @@
 
 
   <main id="sobre" class="container text-center p-4 my-5">
-    <img src="674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto mb-4">
+    <img src="/img/674d493fcbf7c40c8fb4f006d76b41e7.jpg" alt="Minha foto" class="foto mb-4">
 
     <h1 class="fw-bold nome">Pedro Henrique Lopes de Lara</h1>
     <p class="descricao my-3">
@@ -68,13 +69,13 @@
  
       <div class="carousel-inner rounded-4 shadow-lg">
         <div class="carousel-item active">
-          <img src="devil-may-cry-nero-feature.avif" class="d-block w-100" alt="Projeto 1">
+          <img src="/img/devil-may-cry-nero-feature.avif" class="d-block w-100" alt="Projeto 1">
         </div>
         <div class="carousel-item">
-          <img src="THE CAPCOM PROJECT - Trish.png" class="d-block w-100" alt="Projeto 2">
+          <img src="/img/THE CAPCOM PROJECT - Trish.png" class="d-block w-100" alt="Projeto 2">
         </div>
         <div class="carousel-item">
-          <img src="989f0xwrif931.jpg" class="d-block w-100" alt="Projeto 3">
+          <img src="/img/989f0xwrif931.jpg" class="d-block w-100" alt="Projeto 3">
         </div>
       </div>
 
