--- a/pages/index.html
+++ b/pages/index.html
@@ -45,7 +45,7 @@
     <h1 class="fw-bold nome">Pedro Henrique Lopes de Lara</h1>
     <p class="descricao my-3">
       Sou desenvolvedor web apaixonado por criar interfaces modernas e funcionais.<br>
-      Gosto de transformar ideias em código com design simples e elegante.
+      Gosto de transformar ideias em código com design simples e sofisticado.
     </p>
 
     <div class="d-flex justify-content-center gap-3 mt-4">
