--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
+
+    
   >
 <link rel="icon" href="/img/674d493fcbf7c40c8fb4f006d76b41e7.jpg">
   <link rel="stylesheet" href="/style/page_index.css">
+  
 </head>
+
+
 
 <body class="bg-dark text-light">
 
+
+  
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-danger shadow-sm">
   <div class="container">
     <a class="navbar-brand text-danger fw-bold" href="#">Pedro Henrique</a>
@@ -44,7 +51,7 @@
 
     <h1 class="fw-bold nome">Pedro Henrique Lopes de Lara</h1>
     <p class="descricao my-3">
-      Sou desenvolvedor web apaixonado por criar interfaces modernas e funcionais.<br>
+      Sou um <span id="typing"></span> apaixonado por criar interfaces modernas e funcionais.<br>
       Gosto de transformar ideias em código com design simples e sofisticado.
     </p>
 
@@ -94,5 +101,6 @@
  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+  <script src="/js/script.js"></script>
 </body>
 </html>
